# motoshopData

./: .env.example  .gitignore  AGENTS.md  AGENT_PROMPT.md  INICIAR_AGENTE.md  INICIAR_REVIEWER.md  PENDIENTES.md  PLAN.md  README.md  SEGUIMIENTO.md  errores.txt  pyproject.toml
docs/: EDA-2026-06.md  (+33 more)
motoshop-app/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  tenants.yaml  users.yaml  users.yaml.example
motoshop-app/api/_runs/: v_fix_inventory_valor_20260530.md  v_render_deploy_20260530.md
motoshop-app/api/src/motoshop_api/: __init__.py  config.py  demo.html  embeddings.py  logging.py  main.py  synonyms.py  tenants.py
motoshop-app/api/src/motoshop_api/admin/: router.py
motoshop-app/api/src/motoshop_api/alerts/: __init__.py  repo.py  router.py  schemas.py
motoshop-app/api/src/motoshop_api/app_writes/: __init__.py  models.py  repo.py  router.py  schemas.py
motoshop-app/api/src/motoshop_api/auth/: __init__.py  deps.py  hash.py  jwt.py  module_access.py  router.py  schemas.py  tenant_dep.py  users.py
motoshop-app/api/src/motoshop_api/data_catalog/: router.py
motoshop-app/api/src/motoshop_api/db/: __init__.py  engine.py  tables.py
motoshop-app/api/src/motoshop_api/expiry/: __init__.py  repo.py  router.py  schemas.py
motoshop-app/api/src/motoshop_api/forecast/: __init__.py  repo.py  router.py  schemas.py
motoshop-app/api/src/motoshop_api/gastos/: __init__.py  router.py  schemas.py  supabase_client.py
motoshop-app/api/src/motoshop_api/health/: router.py
motoshop-app/api/src/motoshop_api/llm/: briefing.py  client.py  forecast_explainer.py  qa_chat.py  router.py  tools.py
motoshop-app/api/src/motoshop_api/metrics/: __init__.py  repo.py  repo_duckdb.py  router.py  schemas.py  snapshot.py
motoshop-app/api/tests/: conftest.py  test_alert_actions.py  test_alert_actions_integration.py  test_alerts.py  test_auth_jwt.py  test_auth_logging.py  test_auth_login.py  test_auth_modules.py  test_auth_tenant_dep.py  test_auth_users.py  test_briefing_prompt_tenant.py  test_env_guardrail.py  test_expiry_lots.py  test_expiry_migration.py  test_forecast.py  test_gastos_copiar.py  test_health.py  test_health_freshness.py  test_llm_briefing_multitenant.py  test_metrics.py  test_metrics_cohortes_detail.py  test_metrics_drift.py  test_metrics_forecast_categoria.py  test_metrics_plan_compras.py  test_metrics_trend.py  test_metrics_vendedores.py  test_multi_tenant.py  test_pipeline_runs_snapshot.py  test_product_metrics_duckdb.py  test_products.py  test_purchase_plans.py  test_repo_duckdb_tenant.py  test_sales.py  test_sales_consistency.py  test_sales_forecast_monthly.py  test_stock.py  test_tenants.py  test_users_admin.py  test_users_supabase_repo.py
(+416 files in other folders)
