[project]
name = "motoshop-data"
version = "0.0.0"
description = "Track A · Analítica MotoShop (Databricks Lakehouse, medallion bronze→silver→gold, ML)."
requires-python = ">=3.11"
readme = "README.md"

# Las dependencias reales (pyspark, mlflow, lightgbm, prophet, etc.) se manejan
# dentro del cluster Databricks. Aquí solo declaramos lo necesario para tests
# locales de transformaciones y herramientas de desarrollo.
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
