[project]
name = "motoshop-api"
version = "0.0.0"
description = "Track T · API FastAPI de MotoShop (consulta remota, solo lectura en F1-F4)."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pytest-cov>=5",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
