[project]
name = "motoshop-api"
version = "0.0.0"
description = "Track T · API FastAPI de MotoShop (consulta remota, solo lectura en F1-F4)."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0,<3",
  "pymysql>=1.1",
  "pyjwt>=2.8",
  "bcrypt>=4.1",
  "slowapi>=0.1.9",
  "pyyaml>=6",
  "structlog>=24",
  "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pytest-cov>=5",
  "httpx>=0.27",
  "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
